app/assets/stylesheets/style_guide.css.scss
/* ... */
.page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 100;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px 5px 0 5px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      CREATE LESSON PAGE HEADLINE
***************************************/
.create-lesson-page-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: .25em;
  margin-top: 3em;
}

.create-lesson-page-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.create-lesson-page-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;

}

.create-lesson-page-headline-rule-first {
  margin-bottom: 3em;
}

.create-lesson-page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      LOG IN PAGE HEADLINE
***************************************/
.login-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: .25em;
  margin-top: 1.5em;
}

.login-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.login-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;
}

.login-headline-rule-first {
  margin-bottom: 3em;
}

.login-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}

/***************************************
      EDIT MY PROFILE PAGE HEADLINE
***************************************/
.edit-my-profile-page-headline {
  text-align: center;
  font-size: 2.4em;
  font-family: $headline-font;
  font-weight: 400;
  color: $alt-top-bg-color;
  margin-bottom: .25em;
  margin-top: 1.5em;
}

.edit-my-profile-page-headline-rule-first {
  border-bottom: 1px solid #eee;
  width: 25%;
  margin: 0 auto 0;
}

.edit-my-profile-page-headline-rule-container {
  position: relative;
  margin: 0 auto 0;
  padding-top: .2em;
  margin-bottom: 3em;

}

.edit-my-profile-page-headline-rule-first {
  margin-bottom: 3em;
}

.edit-my-profile-page-headline-triangle {
  position: absolute;
  right: 50%;
  transform: translate(50%);
  top: 0;
  z-index: 1;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 13px 8px 0 8px;
  border-color: #ccc transparent transparent transparent;
}


/***************************************
          PAGE SUB HEADLINE
***************************************/
.page-sub-headline {
  text-align: center;
  font-size: 1.8em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
  margin-bottom: 1em;
}

/***************************************
             BODY TEXT
***************************************/
.body-text-container {
  width: 60%;
  max-width: 800px;
  margin: 1em auto 2em;
}

.body-text {
  font-size: 1.1em;
  font-family: $headline-font;
  font-weight: 400;
  color: $dark-header-color;
  line-height: 1.6em;
}

// /***************************************
//   MY PROFILE PERSONAL INFO
// ***************************************/
// .profile-wrapper {
//   padding: 3em 0 3em;
// }
//
// .user-profile-photo-wrapper {
//   margin-left: 0 auto 0
// }
//
// .user-profile-photo-wrapper img {
//   width: 50px;
//   height: 50px;
//   border-radius: 50%;
//   margin-bottom: .5em;
// }
//
// .user-profile-unique-information {
//   font-family: $headline-font;
//   font-weight: 400;
//   color: #888;
//   font-size: .9em;
//   letter-spacing: .02em;
//   margin-bottom: 3.9em;
// }
//
// .profile-page-user-labels {
//   font-family: '$headline-font;
//   font-weight: bolder;
//   color: #888;
//   font-size: .9em;
// }
//
// .user-profile-unique-information li {
//   margin-bottom: .65em;
// }
//
// .profile-wrapper hr {
//   border-top: 1px solid #ddd;
//   border-bottom: #fff;
//   margin-bottom: 4em;
// }
//
// /***************************************
//   MY PROFILE PERSONAL INFO
//          MEDIA QUERY
// ***************************************/
// @media screen and (max-width: 550px) {
//   .profile-wrapper  {
//     width: 100%;
//     display: block;
// }
//
// .user-profile-photo-wrapper {
//   display: block;
//   text-align: center;
//   margin: 0 auto 0;
// }
//
// .user-profile-photo-wrapper img {
//   margin-bottom: 0 0 1em 0;
// }
//
// .user-profile-information-wrapper-right {
//   margin: 0 auto 0;
//   display: block;
// }
//
// .user-profile-unique-information {
//   margin-bottom: 2em;
// }
// }

/*********************************************
PROFILE PAGE LESSON VIEW
********************************************/
.pp-lesson-container {
  min-width: 475px;
  width: 80%;
  margin: 0 auto 1em;
}

.pp-lesson-link {
  text-decoration: none;
}

.pp-lesson-title {
  font-size: 1.3em;
  font-family: $headline-font;
  font-weight: 400;
  color: #111;
}

.pp-lesson-subject-list {
  display: inline;
  font-size: .85em;
  font-family: $headline-font;
  font-weight: 400;
  color: #111;
  padding-right: .75em;
}

.pp-lesson-pipe {
  display: inline;
  font-size: .85em;
  font-family: $headline-font;
  font-weight: 400;
  color: #111;
}

.pp-lesson-grade-list {
  display: inline;
  font-size: .85em;
  font-family: $headline-font;
  font-weight: 400;
  color: #111;
  padding: 0 .75em 0 .75em;
}

.pp-lesson-shim {
  display: block;
  width: 100%;
  height: 1em;
}

.pp-lesson-description-container {
  padding: 1em;
  background: #fff;
}
/* ... */

